--- a/index.html
+++ b/index.html
@@ -68,21 +68,38 @@
 
     <main>
 
-        <section class="vh-100 bg-black position-relative">
-            <div class="container d-flex flex-column min-vh-100">
-                <div class="row my-auto justify-content-center">
-                    <div class="col-lg-6 text-center">
-                        <h1 class="display-1 text-shadow text-white position-relative" style="z-index:1;">Todas as viagens estão aqui</h1>
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <figure class="background-spread">
-                <img src="assets/Img/HomepageImageAround/1.jpg">
-                <img src="assets/Img/HomepageImageAround/2.jpg">
-                <img src="assets/Img/HomepageImageAround/3.jpg">
-                <img src="assets/Img/HomepageImageAround/4.jpg">
-                <img src="assets/Img/HomepageImageAround/5.jpg">
-            </figure>
         </section>
     </main>
 
