--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <main>
 
-        <section>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <section class="vh-100">
+            <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="true">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
