--- a/index.html
+++ b/index.html
@@ -80,13 +80,31 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <figure class="background-spread">
+                            <img src="assets/Img/HomepageImageAround/1.jpg">
+                            <img src="assets/Img/HomepageImageAround/2.jpg">
+                            <img src="assets/Img/HomepageImageAround/3.jpg">
+                            <img src="assets/Img/HomepageImageAround/4.jpg">
+                            <img src="assets/Img/HomepageImageAround/5.jpg">
+                        </figure>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <figure class="background-spread">
+                            <img src="assets/Img/HomepageImageAround/1.jpg">
+                            <img src="assets/Img/HomepageImageAround/2.jpg">
+                            <img src="assets/Img/HomepageImageAround/3.jpg">
+                            <img src="assets/Img/HomepageImageAround/4.jpg">
+                            <img src="assets/Img/HomepageImageAround/5.jpg">
+                        </figure>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <figure class="background-spread">
+                            <img src="assets/Img/HomepageImageAround/1.jpg">
+                            <img src="assets/Img/HomepageImageAround/2.jpg">
+                            <img src="assets/Img/HomepageImageAround/3.jpg">
+                            <img src="assets/Img/HomepageImageAround/4.jpg">
+                            <img src="assets/Img/HomepageImageAround/5.jpg">
+                        </figure>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
