--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
+                <div class="carousel-inner h-100">
+                    <div class="carousel-item h-100 active">
                         <figure class="background-spread">
                             <img src="assets/Img/HomepageImageAround/1.jpg">
                             <img src="assets/Img/HomepageImageAround/2.jpg">
@@ -88,7 +88,7 @@
                             <img src="assets/Img/HomepageImageAround/5.jpg">
                         </figure>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item h-100">
                         <figure class="background-spread">
                             <img src="assets/Img/HomepageImageAround/1.jpg">
                             <img src="assets/Img/HomepageImageAround/2.jpg">
@@ -97,7 +97,7 @@
                             <img src="assets/Img/HomepageImageAround/5.jpg">
                         </figure>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item h-100">
                         <figure class="background-spread">
                             <img src="assets/Img/HomepageImageAround/1.jpg">
                             <img src="assets/Img/HomepageImageAround/2.jpg">
