--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
 
         <section class="vh-100">
-            <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="true">
+            <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
