--- a/index.html
+++ b/index.html
@@ -77,34 +77,26 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner h-100">
                     <div class="carousel-item h-100 active">
-                        <figure class="background-spread">
-                            <img src="assets/Img/HomepageImageAround/1.jpg">
-                            <img src="assets/Img/HomepageImageAround/2.jpg">
-                            <img src="assets/Img/HomepageImageAround/3.jpg">
-                            <img src="assets/Img/HomepageImageAround/4.jpg">
-                            <img src="assets/Img/HomepageImageAround/5.jpg">
-                        </figure>
+                        <img src="assets/Img/HomepageImageAround/1.jpg">
                     </div>
                     <div class="carousel-item h-100">
-                        <figure class="background-spread">
-                            <img src="assets/Img/HomepageImageAround/1.jpg">
-                            <img src="assets/Img/HomepageImageAround/2.jpg">
-                            <img src="assets/Img/HomepageImageAround/3.jpg">
-                            <img src="assets/Img/HomepageImageAround/4.jpg">
-                            <img src="assets/Img/HomepageImageAround/5.jpg">
-                        </figure>
+                        <img src="assets/Img/HomepageImageAround/2.jpg">
                     </div>
                     <div class="carousel-item h-100">
-                        <figure class="background-spread">
-                            <img src="assets/Img/HomepageImageAround/1.jpg">
-                            <img src="assets/Img/HomepageImageAround/2.jpg">
-                            <img src="assets/Img/HomepageImageAround/3.jpg">
-                            <img src="assets/Img/HomepageImageAround/4.jpg">
-                            <img src="assets/Img/HomepageImageAround/5.jpg">
-                        </figure>
+                        <img src="assets/Img/HomepageImageAround/3.jpg">
+                    </div>
+                    <div class="carousel-item h-100">
+                        <img src="assets/Img/HomepageImageAround/4.jpg">
+                    </div>
+                    <div class="carousel-item h-100">
+                        <img src="assets/Img/HomepageImageAround/5.jpg">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
