--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header class="navbar navbar-expand-lg bg-light">
+    <header class="navbar navbar-expand-lg bg-light sticky-top">
         <div class="container">
 
             <a class="navbar-brand" href="#">Viagens do Zozebino</a>
@@ -69,42 +69,37 @@
     <main>
 
         <section class="vh-100">
-            <div id="carouselExampleIndicators" class="carousel slide h-100" data-bs-ride="false">
+            <div id="hompege-slider" class="carousel slide h-100" data-bs-ride="false">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="4"
                         aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner h-100">
-                    <div class="carousel-item h-100 active">
-                        <img src="assets/Img/HomepageImageAround/1.jpg">
+                    <div class="carousel-item h-100 active" style="background-image: url('assets/Img/HomepageImageAround/1.jpg');">
                     </div>
-                    <div class="carousel-item h-100">
-                        <img src="assets/Img/HomepageImageAround/2.jpg">
+                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/2.jpg');">
                     </div>
-                    <div class="carousel-item h-100">
-                        <img src="assets/Img/HomepageImageAround/3.jpg">
+                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/3.jpg');">
                     </div>
-                    <div class="carousel-item h-100">
-                        <img src="assets/Img/HomepageImageAround/4.jpg">
+                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/4.jpg');">
                     </div>
-                    <div class="carousel-item h-100">
-                        <img src="assets/Img/HomepageImageAround/5.jpg">
+                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/5.jpg');">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                <button class="carousel-control-prev" type="button" data-bs-target="#hompege-slider"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                <button class="carousel-control-next" type="button" data-bs-target="#hompege-slider"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
