--- a/index.html
+++ b/index.html
@@ -68,24 +68,19 @@
 
     <main>
 
-        <section class="vh-100">
-            <div id="hompege-slider" class="carousel slide h-100" data-bs-ride="false">
+        <section >
+            <div id="hompege-slider" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="3"
-                        aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#hompege-slider" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
-                <div class="carousel-inner h-100">
-                    <div class="carousel-item h-100 active" style="background-image: url('assets/Img/HomepageImageAround/1.jpg');">
+                <div class="carousel-inner">
+                    <div class="carousel-item ratio ratio-16x9 active" style="background-image: url('assets/Img/HomepageImageAround/1.jpg');">
                     </div>
-                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/2.jpg');">
+                    <div class="carousel-item ratio ratio-16x9" style="background-image: url('assets/Img/HomepageImageAround/2.jpg');">
                     </div>
                     <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/3.jpg');">
                     </div>
