--- a/index.html
+++ b/index.html
@@ -82,20 +82,18 @@
                     </div>
                     <div class="carousel-item ratio ratio-16x9" style="background-image: url('assets/Img/HomepageImageAround/2.jpg');">
                     </div>
-                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/3.jpg');">
+                    <div class="carousel-item ratio ratio-16x9" style="background-image: url('assets/Img/HomepageImageAround/3.jpg');">
                     </div>
-                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/4.jpg');">
+                    <div class="carousel-item ratio ratio-16x9" style="background-image: url('assets/Img/HomepageImageAround/4.jpg');">
                     </div>
-                    <div class="carousel-item h-100" style="background-image: url('assets/Img/HomepageImageAround/5.jpg');">
+                    <div class="carousel-item ratio ratio-16x9" style="background-image: url('assets/Img/HomepageImageAround/5.jpg');">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#hompege-slider"
-                    data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#hompege-slider" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#hompege-slider"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#hompege-slider" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
